<resources>
    <string name="app_name">博通BoTo</string>
    <string name="action_settings">系统设置</string>
    <string name="action_personal">个人中心</string>
    <string name="action_backup">数据备份</string>
    <string name="action_feedback">反馈中心</string>
    <string name="action_qr_card">扫描二维码</string>
    <string name="action_about">关于博通</string>
    <string name="action_search">搜索</string>

    //Fragment Contact.history.Sms.title
    <string name="history">历史纪录</string>
    <string name="contact">联系人</string>
    <string name="Sms">短讯息</string>

    <string name="phone_number">电话号码</string>
    <string name="phone_type">类型</string>
    <string name="type_main">主要</string>
    <string name="type_home">住宅</string>
    <string name="type_mobile">移动</string>
    <string name="type_work">工作</string>
    <string name="type_other">其他</string>

    <!-- Add Contacts strings -->
    <string name="add_contact">添加联系人</string>
    <string name="name">姓名</string>
    <string name="nick_name">昵称</string>
    <string name="company">公司</string>
    <string name="im">通讯</string>
    <string name="note">备注</string>
    <string name="phone">电话号码</string>
    <string name="phoneType">电话号码类型</string>
    <string name="email">邮箱地址</string>
    <string name="emailType">邮箱地址类型</string>
    <string name="postal_address">地址</string>
    <string name="addressType">地址类型</string>
    <string name="more">更多</string>

    <string-array name="address_type">
        <item>主要</item>
        <item>住宅</item>
        <item>工作</item>
        <item>其他</item>
    </string-array>
    <string-array name="contact_types">
        <item>主要</item>
        <item>住宅</item>
        <item>工作</item>
        <item>移动</item>
    </string-array>


    <string name="warming">警告</string>
    <string name="confirm_delete">你确定要删除此联系人吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="share">分享</string>

    <string name="contact_detail">联系人信息</string>
    <string name="title_activity_settings">Settings</string>

    
    <string name="color_setting">主题设置</string>
    <string name="please_select_a_color">请选择一种颜色作为主题</string>

    <string name="tips">提示</string>
    <string name="after_reopen_app">重启后软件主题生效，是否重启？</string>

    <string name="backup_recovery">备份与还原</string>
    <string name="backup">备份</string>
    <string name="please_select_a_position_of_backup">请选择保存的位置</string>
    <string name="recovery">还原</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="hash_key">#</string>

    <string name="version">版本</string>
    <string name="ver_info">当前版本：1.0</string>
    <string name="about">关于</string>
    <string name="about_info">博通通讯录是一款安卓手机通讯录软件，界面美观，使用方便。目标是是您的生活更加便捷。</string>
    <string name="about_info_english">Boto is an android phone address book software. It is beautiful and easy to use. The goal is to make your life easier.</string>
    <string name="copy_right">版权信息</string>
    <string name="copy_right_info">版权属于@许新操 个人，声明：本软件为本人毕业设计作品，请勿盗版。</string>
    <string name="contact_us">联系我们</string>
    <string name="my_info">邮箱地址：singleangel@vip.qq.com</string>
</resources>
