<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AboutActivity"
    tools:showIn="@layout/activity_about">
    <ScrollView android:id="@+id/svProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:id="@+id/tv_version"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:layout_marginBottom="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_info"
                android:id="@+id/ver_info"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/tv_version"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/about"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:layout_below="@+id/ver_info"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_info"
                android:id="@+id/about_info"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/about"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_info_english"
                android:id="@+id/about_info_eng"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/about_info"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_right"
                android:id="@+id/copy_right"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:layout_below="@+id/about_info_eng"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_right_info"
                android:id="@+id/copy_info"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/copy_right"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:id="@+id/contact_us"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:layout_below="@+id/copy_info"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_info"
                android:id="@+id/my_info"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/contact_us"
                android:textSize="18sp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>