<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/click_to_dismiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:id="@+id/popup_anima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorPrimary"
            android:layout_alignParentBottom="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:layout_alignBottom="@+id/delete"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/delete"
                    android:layout_alignParentTop="true" />
                <Button
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/delete"
                    android:background="@drawable/backspace"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/one"
                    android:text="@string/one"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_below="@+id/delete"
                    android:layout_marginLeft="75dp" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/two"
                    android:text="@string/two"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginLeft="25dp"
                    android:layout_below="@+id/phone"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/three"
                    android:text="@string/three"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginRight="80dp"
                    android:layout_below="@+id/phone"
                    android:layout_toStartOf="@+id/delete"
                    android:layout_marginEnd="25dp" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/four"
                    android:text="@string/four"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_below="@+id/one"
                    android:layout_marginLeft="75dp" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/five"
                    android:text="@string/five"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginLeft="25dp"
                    android:layout_below="@+id/one"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/six"
                    android:text="@string/six"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginRight="80dp"
                    android:layout_below="@+id/one"
                    android:layout_toStartOf="@+id/delete"
                    android:layout_marginEnd="25dp" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/seven"
                    android:text="@string/seven"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_below="@+id/four"
                    android:layout_marginLeft="75dp" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/eight"
                    android:text="@string/eight"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginLeft="25dp"
                    android:layout_below="@+id/four"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/nine"
                    android:text="@string/nine"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginRight="80dp"
                    android:layout_below="@+id/four"
                    android:layout_toStartOf="@+id/delete"
                    android:layout_marginEnd="25dp" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/star"
                    android:text="@string/star"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_below="@+id/seven"
                    android:layout_marginLeft="75dp" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/zero"
                    android:text="@string/zero"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginLeft="25dp"
                    android:layout_below="@+id/seven"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:id="@+id/hash_key"
                    android:text="@string/hash_key"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginRight="80dp"
                    android:layout_below="@+id/seven"
                    android:layout_toStartOf="@+id/delete"
                    android:layout_marginEnd="25dp" />
                <Button
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="center_horizontal"
                    android:id="@+id/call"
                    android:background="@drawable/call_phone"
                    android:layout_below="@+id/zero"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>